Source/Alternet.UI.Pal/Api/PageSetupDialog.Api.h

// <auto-generated> DO NOT MODIFY MANUALLY. Copyright (c) 2024 AlterNET Software.</auto-generated>

#pragma once

#include "PageSetupDialog.h"
#include "PrintDocument.h"
#include "Window.h"
#include "ApiUtils.h"
#include "Exceptions.h"

using namespace Alternet::UI;

ALTERNET_UI_API PageSetupDialog* PageSetupDialog_Create_()
{
    return new PageSetupDialog();
}

ALTERNET_UI_API PrintDocument* PageSetupDialog_GetDocument_(PageSetupDialog* obj)
{
    return obj->GetDocument();
}

ALTERNET_UI_API void PageSetupDialog_SetDocument_(PageSetupDialog* obj, PrintDocument* value)
{
    obj->SetDocument(value);
}

ALTERNET_UI_API Thickness_C PageSetupDialog_GetMinMargins_(PageSetupDialog* obj)
{
    return obj->GetMinMargins();
}

ALTERNET_UI_API void PageSetupDialog_SetMinMargins_(PageSetupDialog* obj, Thickness value)
{
    obj->SetMinMargins(value);
}

ALTERNET_UI_API c_bool PageSetupDialog_GetMinMarginsValueSet_(PageSetupDialog* obj)
{
    return obj->GetMinMarginsValueSet();
}

ALTERNET_UI_API void PageSetupDialog_SetMinMarginsValueSet_(PageSetupDialog* obj, c_bool value)
{
    obj->SetMinMarginsValueSet(value);
}

ALTERNET_UI_API c_bool PageSetupDialog_GetAllowMargins_(PageSetupDialog* obj)
{
    return obj->GetAllowMargins();
}

ALTERNET_UI_API void PageSetupDialog_SetAllowMargins_(PageSetupDialog* obj, c_bool value)
{
    obj->SetAllowMargins(value);
}

ALTERNET_UI_API c_bool PageSetupDialog_GetAllowOrientation_(PageSetupDialog* obj)
{
    return obj->GetAllowOrientation();
}

ALTERNET_UI_API void PageSetupDialog_SetAllowOrientation_(PageSetupDialog* obj, c_bool value)
{
    obj->SetAllowOrientation(value);
}

ALTERNET_UI_API c_bool PageSetupDialog_GetAllowPaper_(PageSetupDialog* obj)
{
    return obj->GetAllowPaper();
}

ALTERNET_UI_API void PageSetupDialog_SetAllowPaper_(PageSetupDialog* obj, c_bool value)
{
    obj->SetAllowPaper(value);
}

ALTERNET_UI_API c_bool PageSetupDialog_GetAllowPrinter_(PageSetupDialog* obj)
{
    return obj->GetAllowPrinter();
}

ALTERNET_UI_API void PageSetupDialog_SetAllowPrinter_(PageSetupDialog* obj, c_bool value)
{
    obj->SetAllowPrinter(value);
}

ALTERNET_UI_API ModalResult PageSetupDialog_ShowModal_(PageSetupDialog* obj, Window* owner)
{
    return obj->ShowModal(owner);
}